# HostileCopilot

./: .gitignore  LICENSE  README.md  conftest.py  cuda_install.py  cuda_test.py  pyproject.toml  pytest.ini
config/: active_scanner.yaml  config.yaml  config_private.sample.yaml
resources/models/: analyze_ping.onnx  calibrate_system.onnx  copilot.onnx  mining_logger.onnx  mining_logger.tflite  scan_this.onnx  stop.onnx
scripts/: display_calibration_boxes.py  get_bounding_region.py  location_tool.py  locations_check_dup.py  print_click_location.py  test_active_scanner.py  test_app_tool.py  test_audio_device.py  test_audio_mixer.py  test_dictation.py  test_dxcam.py  test_ping_analysis.py  test_scanner.py  test_wake_word.py  uexcorp_locations.py
src/hostile_copilot/: __init__.py  __main__.py
src/hostile_copilot/audio/: __init__.py  audio_data.py  audio_device.py  buffers.py  files.py  mixer.py  playback_buffer.py  utils.py
src/hostile_copilot/client/: __init__.py  active_scanner.py  app.py  commodity_grader.py  main.py
src/hostile_copilot/client/components/: __init__.py
src/hostile_copilot/client/components/locations/: __init__.py  custom_types.py  locations.py  text.py  types.py
src/hostile_copilot/client/components/ui/: __init__.py  canvas_window.py  drawable_surface.py  overlay.py  overlay_detections.py
src/hostile_copilot/client/components/ui/components/: __init__.py  base.py  box.py  labeled_box.py  oriented_box.py  polygon.py  text_box.py
src/hostile_copilot/client/config/: active_scanner.py
src/hostile_copilot/client/regolith/: __init__.py  client.py  types.py
src/hostile_copilot/client/tasks/: __init__.py  base.py  bounded_screenshot.py  extract_locations.py  extract_scan.py  macro.py  mining_scan_grader.py  nav_set_route.py  ping_analysis.py  screen_bounding_box.py  screen_get_location.py  types.py
src/hostile_copilot/client/uexcorp/: __init__.py  client.py  custom_types.py  types.py
src/hostile_copilot/client/voice/: __init__.py  recording_state.py  voice_client.py
src/hostile_copilot/config/: __init__.py  app_config.py  config.py
src/hostile_copilot/core/: __init__.py
src/hostile_copilot/core/config/: __init__.py
src/hostile_copilot/mining_logger/: __init__.py  mining_logger.py  types.py
src/hostile_copilot/ping_analyzer/: __init__.py  analyzer.py  common.py
src/hostile_copilot/scan_reader/: __init__.py  model.py  transforms.py  utils.py
src/hostile_copilot/stt/: __init__.py  engine.py  engine_local.py  engine_openai.py  loader.py
src/hostile_copilot/tools/: overlay_demo.py
src/hostile_copilot/tts/: __init__.py  engine.py  engine_local.py  engine_openai.py  loader.py
src/hostile_copilot/ui/: overlay.py
src/hostile_copilot/utils/: geometry.py  rate_limiter.py  speech.py
src/hostile_copilot/utils/debug/: counts.py  objects.py  profiler.py  tracemalloc.py
src/hostile_copilot/utils/input/: keyboard.py
src/hostile_copilot/utils/input/gremlin/: keyboard.py
src/hostile_copilot/utils/logging/: __init__.py  trace.py
test_files/: Navigation Legend.psd
tests/: test_commodity_grader.py  test_rate_limiter.py
tests/client/components/: test_locations.py
tests/ping_analysis/: test_ping_analysis.py
tools/launcher/: HostileActiveScanner.spec  HostileCoPilot.spec  README.md  assemble_bundle_and_zip.ps1  bootstrapper.py  build_veneer_exes.ps1  build_wrapper_executables.ps1  entry_active_scanner.py  entry_hostile_copilot.py
tools/python-embed/: .gitignore  README.md
wake_word_training/: copilot_model.yml  mining_logger.yml  stop_model.yml
