[project]
name = "HostileCoPilot"
version = "0.1.0"
description = "Star Citizen Companion"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Martin", email = "martin@example.com"},
]
keywords = ["star-citizen", "companion", "gaming", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "kokoro>=0.9.4",
    "omegaconf>=2.3.0",
    "pip>=25.2",
    "pyaudio>=0.2.14",
    "pydantic-ai>=0.7.4",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "scipy-stubs>=1.16.1.1",
    "types-pyaudio>=0.2.14",
]

[project.scripts]
hostile-copilot = "hostile_copilot.client.main:main"

[project.urls]
Homepage = "https://github.com/madsmith/HostileCoPilot"
Repository = "https://github.com/madsmith/HostileCoPilot"
Issues = "https://github.com/madsmith/HostileCoPilot/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
