[project]
name = "HostileCoPilot"
version = "0.1.0"
description = "Star Citizen Companion"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Martin Smith", email = "msmith@bitmonster.org"},
]
keywords = ["star-citizen", "companion", "gaming", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "kokoro>=0.9.4",
    "omegaconf>=2.3.0",
    "pip>=25.2",
    "pyaudio>=0.2.14",
    "pydantic-ai>=0.7.4",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "torchaudio>=2.8.0",
    "openwakeword>=0.6.0",
    "silero-vad>=5.1.2",
    "pydub>=0.25.1",
    "openai>=1.100.2",
    "pyautogui>=0.9.54",
    "pillow>=11.3.0",
    "opencv-python>=4.12.0.88",
    "pynput>=1.8.1",
    "requests>=2.32.5",
    "logfire[requests]>=4.3.5",
    "scikit-learn>=1.7.1",
    "anyio>=4.10.0",
    "ultralytics>=8.3.228",
    "pyside6>=6.10.0",
    "qasync>=0.28.0",
    "mss>=10.1.0",
]

[project.scripts]
hostile-copilot = "hostile_copilot.client.main:main"
hostile-copilot-active-scanner = "hostile_copilot.client.active_scanner:main"

[project.urls]
Homepage = "https://github.com/madsmith/HostileCoPilot"
Repository = "https://github.com/madsmith/HostileCoPilot"
Issues = "https://github.com/madsmith/HostileCoPilot/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
environments = ["sys_platform == 'win32'"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "scipy-stubs>=1.16.1.1",
    "types-pyaudio>=0.2.14",
    "pympler>=1.1",
    "pytest-asyncio>=1.3.0",
]
